--- a/src/app/page/login/login.component.css
+++ b/src/app/page/login/login.component.css
@@ -46,6 +46,7 @@ button:hover {
 
 p {
   text-align: center;
-  color: rgb(79, 184, 112);
-  font-weight: bold;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  margin-top: 15px;
 }
