--- a/src/app/page/book-appointment/book-appointment.component.html
+++ b/src/app/page/book-appointment/book-appointment.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container">
   <h1>Book an Appointment</h1>
   <form (ngSubmit)="submitAppointment()">
@@ -45,3 +46,4 @@
 
   <div class="success-message" *ngIf="message">{{ message }}</div>
 </div>
+</body>
