--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,5 +1,7 @@
+<body>
+  <form (ngSubmit)="loginUser()" #loginForm="ngForm">
 <h2>Login</h2>
-<form (ngSubmit)="loginUser()" #loginForm="ngForm">
+<br>
   <div>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" [(ngModel)]="user.email" required />
@@ -8,9 +10,18 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" [(ngModel)]="user.password" required />
   </div>
+  <div>
+    <label for="role">Select Role:</label>
+    <select id="role" name="role" [(ngModel)]="user.role" required>
+      <option value="" disabled selected>Select role</option>
+      <option value="doctor">Doctor</option>
+      <option value="patient">Patient</option>
+    </select>
+  </div><br>
   <button type="submit">Login</button>
+  <br><br>
+  <p *ngIf="message" style="color: green;">{{ message }}</p>
+  <p *ngIf="errorMessage" style="color: red;">{{ errorMessage }}</p>
+  <p>Not registered? <a routerLink="/register" style="color:rgb(72, 136, 162)">Register here</a></p>
 </form>
-
-<p *ngIf="message">{{ message }}</p>
-<p *ngIf="errorMessage" style="color: red;">{{ errorMessage }}</p>
-<p>Not registered? <a routerLink="/register" style="color:rgb(72, 136, 162)">Register here</a></p>
+</body>
